<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_anon"
        android:name="com.example.project_sci.ui.anon.AnonFragment"
        android:label="@string/menu_anon"
        tools:layout="@layout/fragment_anon" />
    <fragment
        android:id="@+id/nav_gpa"
        android:name="com.example.project_sci.ui.gpa.GPAFragment"
        android:label="@string/menu_gpa"
        tools:layout="@layout/fragment_g_p_a" />
    <fragment
        android:id="@+id/nav_face"
        android:name="com.example.project_sci.ui.face.FaceFragment"
        android:label="@string/menu_face"
        tools:layout="@layout/fragment_face" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.project_sci.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.project_sci.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.project_sci.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>